# mailfilter

./: .travis.yml  AUTHORS  ChangeLog  ChangeLog.1  INSTALL  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac  mailfilter.spec.in
contrib/: FILES  Makefile.am  README  checkfilter.sh  chrcformat_05-07  deleted.sh  examined.sh  getmailer.pl  getstats.pl  mbox.sh  mfdelete.stat  prozente.pl  rmcrlf  runit.sh  selectheader  sort_de_do.sh  xmailer.sh
doc/: Doxyfile.in  FAQ  Makefile.am  supported_servers
man/: Makefile.am  mailfilter.1  mailfilterex.5  mailfilterrc.5
po/: POTFILES.in  README.Developer  de.po  el.po  es.po  fr.po  it.po  pt_BR.po  ru.po
src/: Makefile.am  account.cc  account.hh  apop.cc  apop.hh  connection.hh  defines.hh  feedback.cc  feedback.hh  filter.cc  filter.hh  header.cc  header.hh  i18n.hh  imap.cc  imap.hh  mailfilter.cc  mailfilter.hh  md5.h  md5c.c  pop3.cc  pop3.hh  preferences.cc  preferences.hh  protocol.cc  protocol.hh  rcfile.hh  rcfile.ll  rcfile.yy  rfc822.ll  rfc822.yy  score.cc  score.hh  socket.cc  socket.hh  weeder.cc  weeder.hh
